--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,48 @@
 @import url('https://fonts.cdnfonts.com/css/harry-potter');
 
-* {  margin: 0;
+* { margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+#resultado {
+  background-color: #cccccc7c;
+  font-size: larger;
+  color:white;
+  
 }
 
 #characters-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: static;
+  flex-wrap: wrap; 
+  justify-items: flex-start; 
+  padding: 33px;
+  gap: 20px;
+}
   .card {
-    background-color: grey;
-    height: 300px;
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    flex-basis: 300px;
+   background-image: url(img/harry.jpg);
+   background-size: 300px 300px;
+   background-repeat: no-repeat;
+   height: 300px;
+   width: 300px;
+   border: 1px solid #ccc;
+   border-radius: 4px;
+   flex-basis: 300px;
+   text-align: center;
+   display: flex;
+   align-items: center;
+   justify-content: center;
   }
+
   
   .info {
     display: flex;
     flex-direction: column;
-  }
-  
+    }
+   
   .name {
     font-size: 20px;
     font-weight: bold;
@@ -45,83 +62,129 @@
     font-size: 16px;
     margin-top: 5px;
   }
-  
 
-.menu {
-    position: relative;
-    margin: 20px;
-    align-items: center;
-    justify-content: space-between;
+  header {
+  background-color:#817b2993;
+  width: 100%;
+
+  }
+
+  .navBar {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  }
+
+  .menu-items {
+  width: 10rem;
+  height: 2.1rem;
+  }
+
+ li {
+  list-style-type:none;
+
 }
-
 .title {
-    color: white;
-    font-size: 58px;
-    font-family: 'Harry Potter', sans-serif;
-    /* cursor: pointer; */
+  color: white;
+  font-size: 58px;
+  font-family: 'Harry Potter', sans-serif;
+  
 }
 
 body {
-    background-image: url(https://images7.alphacoders.com/119/1192080.jpg);
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
+  background-image: url(https://images7.alphacoders.com/119/1192080.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
 
 h2 {
-    text-align:center;
-    color: white;
-    font-family:'Harry Potter';
+  text-align:center;
+  color: white;
+  font-family:'Harry Potter';
   
 }
 
 .btn {
-    width: 200px;
-    padding: 15px 0;
-    text-align: center;
-    border-radius: 25px;
-    font-weight: bold;
-    border: 2px solid #817b29;
-    background: transparent;
-    color: white;
-    cursor: pointer;
-    position: relative;
-    left: 550px;
-    top: 300px;
-    margin: 10px;
-    overflow: hidden;
+  width: 200px;
+  padding: 15px 0;
+  text-align: center;
+  border-radius: 25px;
+  font-weight: bold;
+  border: 2px solid #817b298e;
+  background: transparent;
+  color: white;
+  cursor: pointer;
+  left: 550px;
+  top: 300px;
+  margin: 10px;
+  overflow: hidden;
+  position: relative;
 }
 
 .btn:hover {
-    transition: .2s linear;
-    background-color: #817b29;
-    font-size: 18px;
+  transition: .2s linear;
+  background-color: #817b2977;
+  font-size: 15px;
 }
 
 footer {
   font-size: 14px;
   width: 100%;
   bottom: 0;
-  height: 2rem;
+  height: 23px;
   text-align: center;
   background-color: rgb(11, 58, 68);
   color: #fff;
   border-top: 4px solid #817b29;
-  box-shadow: 0.4em 0.2em 0.2em 0.2em #817b29;
-  padding-top: 30px;
-  margin-top: 30px;  
+  box-shadow: 0.2em 0.2em 0.2em 0.2em #817b29;
+  position: fixed; 
 }
 
 footer a {
   color: rgb(255, 255, 255);
   text-decoration: underline;
   
+}
+
+  @media(max-width: 740px) and (min-width: 310px) {
+  
+  .navBar {
+    align-items: normal;
+    justify-content: space-between;  
   }
-  header {
-    display: flex;
-    background-color:rgba(57, 44, 104, 0.761);
-    width: 100%;
-    flex-direction: row;
+  .title {
+    font-size: 10px;
+  } 
+  /* ul{
+
+  } */
+ .menu-items {
+      height: 20px;
+      width: 100%;
+      margin: 6px auto;      
+} 
+
+#resultado {
+  background-color: #cccccc7c;
+  font-size: auto;
+  color:white;
+  
+
+}
+}
+/* @media (max-width: 768px) {
+  html {
+   font-size: auto;
   }
+  }
+  
+  @media (max-width: 630px) {
+  .header{ 
+     display: auto ;
+     flex-direction: row;
+     font-size: 10px;
+     margin:auto;
+    } */
   
